--- a/surprise.html
+++ b/surprise.html
@@ -1,180 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Confession — Will You Be My Girlfriend?</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <script src="script.js" defer></script>
+  <meta property="og:title" content="Will you be my girlfriend? — Dio for Marisa">
+  <meta property="og:description" content="A little confession, a whole lot of heart.">
+  <meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
+  <meta name="twitter:card" content="summary_large_image">
   <style>
-    /* kecil2 buat efek hati & modal; aman dicampur sama style.css kamu */
-    .confess-hero{
-      background: var(--card-grad);
-      border:1px solid var(--card-br);
-      border-radius:18px;
-      padding:22px;
-      display:grid;
-      grid-template-columns:300px 1fr;
-      gap:22px;
-      margin-bottom:18px;
-    }
-    .confess-cover{height:300px;width:100%;object-fit:cover;border-radius:18px}
-    .cta{
-      display:flex;gap:12px;margin-top:14px;flex-wrap:wrap
-    }
-    .btn-yes,.btn-no{
-      border:1px solid #2a2a2a;border-radius:12px;
-      padding:12px 16px;background:#201f21;color:#fff;cursor:pointer;font-weight:600
-    }
-    .btn-yes{background:var(--accent); color:#0b0b0b}
-    .btn-yes:hover{filter:brightness(1.05)}
-    .btn-no:hover{background:#262626}
-    /* hearts */
-    .hearts{pointer-events:none;position:fixed;inset:0;overflow:hidden}
-    .heart{
-      position:absolute;font-size:20px;opacity:.9;animation:float 4s linear forwards
-    }
-    @keyframes float{
-      0%{transform:translateY(0) scale(1);opacity:1}
-      100%{transform:translateY(-120vh) scale(1.4);opacity:0}
-    }
-    /* modal */
-    .modal{
-      position:fixed;inset:0;background:rgba(0,0,0,.6);
-      display:none;align-items:center;justify-content:center;z-index:50
-    }
+    /* small inline styles for modal & hearts */
+    .confess-hero{background:var(--card-grad);border-radius:18px;padding:22px;display:grid;grid-template-columns:300px 1fr;gap:22px}
+    .confess-cover{height:300px;width:100%;object-fit:cover;border-radius:14px}
+    .cta{display:flex;gap:12px;margin-top:14px}
+    .btn-yes,.btn-no{padding:10px 14px;border-radius:10px;border:0;cursor:pointer}
+    .btn-yes{background:var(--accent);color:#071}
+    .btn-no{background:#2a2a2a;color:#fff}
+    .hearts{pointer-events:none;position:fixed;inset:0;overflow:hidden;z-index:20}
+    .heart{position:absolute;font-size:22px;animation:float 4s linear forwards}
+    @keyframes float{0%{transform:translateY(0) scale(1);opacity:1}100%{transform:translateY(-120vh) scale(1.3);opacity:0}}
+    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:40}
     .modal.open{display:flex}
-    .dialog{
-      background:#121212;border:1px solid var(--stroke);border-radius:16px;
-      padding:22px;max-width:520px;width:92%
-    }
-    .dialog h3{margin:0 0 8px 0}
-    .dialog p{color:var(--muted)}
-    .dialog .ok{margin-top:14px;background:var(--accent);border:0;border-radius:10px;padding:10px 14px;font-weight:700;cursor:pointer}
+    .dialog{background:#0d0d0d;padding:20px;border-radius:14px;max-width:520px;width:92%}
   </style>
 </head>
-
-<!-- ganti dengan lagu pengakuanmu -->
 <body data-audio="assets/audio/confess.mp3">
   <div class="layout">
-    <!-- Sidebar -->
     <aside class="sidebar">
       <div class="brand">❤️ Our Playlist Of Love</div>
       <nav class="nav">
         <a href="index.html">Welcomee</a>
         <a href="album.html">Our Love Album</a>
-        <a href="track7.html">Outro: Forever With You</a>
-        <a class="active" href="surprise.html">Confession</a>
+        <a href="track7.html">Outro</a>
+        <a class="active" href="confess.html">Confession</a>
       </nav>
     </aside>
 
-    <!-- Topbar -->
     <header class="topbar">
       <div class="home-pill">💌 Confession</div>
-      <div class="search"><span>🔎</span><input placeholder="Search" /></div>
       <div class="date">08 November 2025</div>
     </header>
 
-    <!-- Content -->
     <main class="content">
       <section class="confess-hero">
-        <img src="assets/Last.jpg" class="confess-cover" alt="Our moments">
+        <img class="confess-cover" src="assets/Home.jpg" alt="Our moments">
         <div>
-          <h1 class="h-title">Will you be my girlfriend, Eca?</h1>
-          <div class="meta">
-            <span>From Dio — with all my heart</span>
-            <span>•</span>
-            <span>We made it this far, let’s name it.</span>
-          </div>
+          <h1 class="h-title">Will you be my girlfriend?</h1>
+          <p class="subtle">From Dio — with all my heart.</p>
 
           <div class="controls" style="margin-top:12px">
-            <!-- tombol play tetap jadi controller audio -->
             <button class="btn-play" title="Play/Pause" aria-label="Play/Pause">▶</button>
-            <button class="btn-ghost" style="color:#fff">♡</button>
-            <button class="btn-ghost" style="color:#fff">⋯</button>
           </div>
 
           <div class="cta">
             <button class="btn-yes" id="yesBtn">Yes 💖</button>
             <button class="btn-no" id="noBtn">Maybe later 🙂</button>
           </div>
-
-          <div class="chips" style="margin-top:12px">
-            <span class="chip">LDR Promise</span>
-            <span class="chip">Real Hugs Soon</span>
-            <span class="chip">Officially Us</span>
-          </div>
         </div>
       </section>
 
-      <div class="tabs" style="margin-top:6px"><span class="active">Message</span></div>
-      <section class="lyrics" style="background:rgba(90,69,96,.22)">
-        <p class="lyric-line">I don’t want to rush what’s meant to be,</p>
-        <p class="lyric-line">but I also don’t want to miss it.</p>
-        <p class="lyric-line">So here I am, asking softly</p>
-        <p class="lyric-line">can we call this love ours?</p>
-        <p class="lyric-line lyric-muted">If your answer is yes, I’ll hold it gently.</p>
-        <p class="lyric-line lyric-muted">If not yet, I’ll waitstill yours.</p>
+      <section class="lyrics" style="background:rgba(90,69,96,.12);margin-top:12px;padding:18px;border-radius:12px">
+        <p>I don't want to rush what's meant to be, but I also don't want to miss it...</p>
       </section>
     </main>
   </div>
 
-  <!-- hearts layer & modal -->
   <div class="hearts" id="hearts"></div>
 
   <div class="modal" id="modal">
     <div class="dialog">
-      <h3 id="modalTitle">Yay! 💍</h3>
+      <h3 id="modalTitle">Yay! 💖</h3>
       <p id="modalText">Thank you for saying yes. From now on, it’s officially us.</p>
-      <button class="ok" id="okBtn">OK</button>
+      <div style="text-align:right;margin-top:12px">
+        <button id="ok" class="btn-yes">OK</button>
+      </div>
     </div>
   </div>
 
   <script>
-    // hearts burst on YES
-    const hearts = document.getElementById('hearts');
-    const yesBtn = document.getElementById('yesBtn');
-    const noBtn  = document.getElementById('noBtn');
-    const modal  = document.getElementById('modal');
-    const modalTitle = document.getElementById('modalTitle');
-    const modalText  = document.getElementById('modalText');
-    const okBtn  = document.getElementById('okBtn');
+    // small sfx players (place files accordingly)
+    const sfxClick = new Audio('assets/audio/sfx-chime.mp3');
+    const sfxCelebrate = new Audio('assets/audio/sfx-celebrate.mp3');
 
-    function burstHearts(count=24){
-      for(let i=0;i<count;i++){
+    const hearts = document.getElementById('hearts');
+    const yes = document.getElementById('yesBtn');
+    const no  = document.getElementById('noBtn');
+    const modal = document.getElementById('modal');
+    const ok = document.getElementById('ok');
+
+    function burst(n=24){
+      for(let i=0;i<n;i++){
         const el = document.createElement('div');
-        el.className = 'heart';
-        el.textContent = '❤️';
+        el.className='heart';
+        el.textContent='❤️';
         el.style.left = Math.random()*100 + 'vw';
-        el.style.bottom = '-10vh';
+        el.style.bottom= '-10vh';
+        el.style.fontSize = (14 + Math.random()*22) + 'px';
         el.style.animationDuration = (3 + Math.random()*2) + 's';
-        el.style.fontSize = (18 + Math.random()*14) + 'px';
         hearts.appendChild(el);
-        setTimeout(()=>el.remove(), 5000);
+        setTimeout(()=>el.remove(),6000);
       }
     }
 
-    yesBtn.addEventListener('click', ()=>{
-      burstHearts(36);
+    yes.addEventListener('click', ()=>{
+      try{sfxClick.play()}catch(e){}
       localStorage.setItem('confessAnswer','yes');
-      modalTitle.textContent = 'Yay! 💖';
-      modalText.textContent = 'Thank you for saying yes. From this moment, it’s officially us.';
+      burst(36);
+      setTimeout(()=>{ try{sfxCelebrate.play()}catch(e){} }, 400);
       modal.classList.add('open');
+      document.getElementById('modalTitle').textContent='Yay! 💍';
+      document.getElementById('modalText').textContent='We are official. I love you.';
     });
 
-    noBtn.addEventListener('click', ()=>{
+    no.addEventListener('click', ()=>{
+      try{sfxClick.play()}catch(e){}
       localStorage.setItem('confessAnswer','later');
-      modalTitle.textContent = 'It’s okay 🙂';
-      modalText.textContent = 'Take your time. I’ll be here, patiently, still choosing you every day.';
       modal.classList.add('open');
+      document.getElementById('modalTitle').textContent='It’s okay 🙂';
+      document.getElementById('modalText').textContent='Take your time. I’ll be here.';
     });
 
-    okBtn.addEventListener('click', ()=> modal.classList.remove('open'));
+    ok.addEventListener('click', ()=> modal.classList.remove('open'));
 
-    // if she opens again, personalize a bit
-    const answer = localStorage.getItem('confessAnswer');
-    if(answer === 'yes'){
-      setTimeout(()=>burstHearts(12), 600);
+    // small personalization on load
+    if(localStorage.getItem('confessAnswer')==='yes'){
+      setTimeout(()=>burst(12),600);
     }
   </script>
 </body>
