Modify Open Graph tags in surprise.html
Updated Open Graph meta tags for better sharing.

--- a/surprise.html
+++ b/surprise.html
@@ -10,6 +10,12 @@
   <meta property="og:description" content="A little confession, a whole lot of heart.">
   <meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
   <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:title" content="Happy Birthday My Love — Dio for Marisa">
+<meta property="og:description" content="A handcrafted playlist & confession page.">
+<meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
+<meta property="og:url" content="https://ecabirthday.netlify.app/">
+<meta name="twitter:card" content="summary_large_image">
+
   <style>
     /* small inline styles for modal & hearts */
     .confess-hero{background:var(--card-grad);border-radius:18px;padding:22px;display:grid;grid-template-columns:300px 1fr;gap:22px}
@@ -131,3 +137,4 @@
   </script>
 </body>
 </html>
+
