Add Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:title" content="Happy Birthday My Love — Dio for Marisa">
+<meta property="og:description" content="A handcrafted playlist & confession page.">
+<meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
+<meta property="og:url" content="https://ecabirthday.netlify.app/">
+<meta name="twitter:card" content="summary_large_image">
+
   <title>Our Playlist Of Love — Home</title>
 
   <link rel="stylesheet" href="style.css">
@@ -58,7 +64,7 @@
           </div>
 
           <div class="controls">
-            <button class="btn-play" title="Play" aria-label="Play or Pause">▶</button>
+<button class="btn-play" aria-label="Play or pause">▶</button>
             <button class="btn-ghost" style="color:white">♡</button>
             <button class="btn-ghost" style="color:white">＋</button>
             <button class="btn-ghost" style="color:white">⇩</button>
@@ -111,3 +117,4 @@
   </div>
 </body>
 </html>
+
