Update lyrics in surprise.html
Replaced lyrics in the lyrics section with preferred lines.

--- a/surprise.html
+++ b/surprise.html
@@ -10,12 +10,6 @@
   <meta property="og:description" content="A little confession, a whole lot of heart.">
   <meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:title" content="Happy Birthday My Love — Dio for Marisa">
-<meta property="og:description" content="A handcrafted playlist & confession page.">
-<meta property="og:image" content="https://ecabirthday.netlify.app/assets/Home.jpg">
-<meta property="og:url" content="https://ecabirthday.netlify.app/">
-<meta name="twitter:card" content="summary_large_image">
-
   <style>
     /* small inline styles for modal & hearts */
     .confess-hero{background:var(--card-grad);border-radius:18px;padding:22px;display:grid;grid-template-columns:300px 1fr;gap:22px}
@@ -68,7 +62,13 @@
       </section>
 
       <section class="lyrics" style="background:rgba(90,69,96,.12);margin-top:12px;padding:18px;border-radius:12px">
-        <p>I don't want to rush what's meant to be, but I also don't want to miss it...</p>
+        <!-- <-- Replaced with the older lyrics you preferred --> 
+        <p class="lyric-line">I don’t want to rush what’s meant to be,</p>
+        <p class="lyric-line">but I also don’t want to miss it.</p>
+        <p class="lyric-line">So here I am, asking softly—</p>
+        <p class="lyric-line">can we call this love ours?</p>
+        <p class="lyric-line lyric-muted">If your answer is yes, I’ll hold it gently.</p>
+        <p class="lyric-line lyric-muted">If not yet, I’ll wait—still yours.</p>
       </section>
     </main>
   </div>
@@ -137,4 +137,3 @@
   </script>
 </body>
 </html>
-
