--- a/surprise.html
+++ b/surprise.html
@@ -47,8 +47,8 @@
       <section class="confess-hero">
         <img class="confess-cover" src="assets/Home.jpg" alt="Our moments">
         <div>
-          <h1 class="h-title">Will you be my girlfriend?</h1>
-          <p class="subtle">From Dio — with all my heart.</p>
+          <h1 class="h-title">If this is love’s last track, I want it to be ours.</h1>
+          <p class="subtle">From Dio — a song that finally found its meaning.</p>
 
           <div class="controls" style="margin-top:12px">
             <button class="btn-play" title="Play/Pause" aria-label="Play/Pause">▶</button>
@@ -137,3 +137,4 @@
   </script>
 </body>
 </html>
+
