Change cover image and modal text
Updated the cover image and modified the modal text for the confession page.

--- a/surprise.html
+++ b/surprise.html
@@ -45,7 +45,7 @@
 
     <main class="content">
       <section class="confess-hero">
-        <img class="confess-cover" src="assets/Home.jpg" alt="Our moments">
+        <img class="confess-cover" src="assets/Last.jpg" alt="Our moments">
         <div>
           <h1 class="h-title">If this is love’s last track, I want it to be ours.</h1>
           <p class="subtle">From Dio — a song that finally found its meaning.</p>
@@ -137,4 +137,5 @@
   </script>
 </body>
 </html>
+
 
