Add navigation toggle button to topbar
Added a navigation toggle button to the topbar for better accessibility.

--- a/album.html
+++ b/album.html
@@ -25,6 +25,7 @@
 
     <!-- Topbar -->
     <header class="topbar">
+      <button id="navToggle" class="nav-toggle" aria-label="Open menu">☰</button>
       <div class="home-pill">💿 Album</div>
       <div class="search"><span>🔎</span><input placeholder="Search" /></div>
       <div class="date">08 November 2025</div>
@@ -214,3 +215,4 @@
   </div>
 </body>
 </html>
+
