Refactor index.html for improved structure and clarity

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <!-- Topbar -->
     <header class="topbar">
+      <button id="navToggle" class="nav-toggle" aria-label="Open menu">☰</button>
       <div class="home-pill">🏠 Home</div>
       <div class="search">
         <span>🔎</span>
@@ -117,4 +118,5 @@
   </div>
 </body>
 </html>
+
 
