Fix HTML structure and add navigation toggle

--- a/surprise.html
+++ b/surprise.html
@@ -39,6 +39,8 @@
     </aside>
 
     <header class="topbar">
+      <button id="navToggle" class="nav-toggle" aria-label="Open menu">☰</button>
+
       <div class="home-pill">💌 Confession</div>
       <div class="date">08 November 2025</div>
     </header>
@@ -137,5 +139,6 @@
   </script>
 </body>
 </html>
+
 
 
