--- a/track2.html
+++ b/track2.html
@@ -23,6 +23,8 @@
 
     <!-- Topbar -->
     <header class="topbar">
+      <button id="navToggle" class="nav-toggle" aria-label="Open menu">☰</button>
+
       <div class="home-pill">▶️ Now Playing</div>
       <div class="search"><span>🔎</span><input placeholder="Search" /></div>
       <div class="date">08 November 2025</div>
@@ -91,3 +93,4 @@
   </div>
 </body>
 </html>
+
