--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://ecabirthday.netlify.app/">
 <meta name="twitter:card" content="summary_large_image">
 
-  <title>Our Playlist Of Love — Home</title>
+  <title>Our Playlist Of Love Home</title>
 
   <link rel="stylesheet" href="style.css">
 
