--- a/album.html
+++ b/album.html
@@ -35,7 +35,7 @@
     <main class="content">
       <!-- Album hero -->
       <section class="album-hero">
-        <img class="album-cover" src="assets/CoverAlbum.jpg" alt="Our Love Album cover">
+        <img class="album-cover" src="assets/Coveralbum.jpg" alt="Our Love Album cover">
         <div>
           <div class="subtle">ALBUM</div>
           <h1 class="h-title">Our Love Album (Birthday Edition)</h1>
@@ -215,4 +215,5 @@
   </div>
 </body>
 </html>
+
 
